# uwastro465isos

./: README.md  pyproject.toml
.github/workflows/: pipy_release.yml
src/uwastro465isos/: __init__.py  isochrones.py
src/uwastro465isos/data/: __init__.py
